@@ -1,6 +1,7 @@
 
 Development (next version)
 - Fixed a bug in the TRSM/TRSV routines due to missing synchronisations after GEMM/GEMV calls
+- Fixed a bug in TRSM when using the a-offset argument
 - Added a CUDA API to CLBlast:
   * The library and kernels can be compiled with the CUDA driver API and NVRTC (requires CUDA 7.5)
   * Two CUDA API sample programs are added: SGEMM and DAXPY
